RESOLVED FIXED26385
Root SVG element is not checked on requiredFeatures, requiredExtension like other elements
https://bugs.webkit.org/show_bug.cgi?id=26385
Summary Root SVG element is not checked on requiredFeatures, requiredExtension like o...
Rob Buis
Reported 2009-06-14 10:53:26 PDT
If on the root SVG element requiredFeatures or any of the other test attributes is set, they are not taken into account. I checked in FF and Opera and there they are taken into account.
Attachments
First attempt (3.88 KB, patch)
2009-06-14 10:58 PDT, Rob Buis
zimmermann: review+
Rob Buis
Comment 1 2009-06-14 10:58:24 PDT
Created attachment 31266 [details] First attempt
Nikolas Zimmermann
Comment 2 2009-06-18 10:23:57 PDT
Comment on attachment 31266 [details] First attempt Ouch, good catch! r=me.
Rob Buis
Comment 3 2009-06-18 11:45:00 PDT
Thanks! Landed in r44808.
Darin Adler
Comment 4 2009-06-18 11:46:37 PDT
This kind of virtual function override in a leaf class should normally be private rather than public.
Note You need to log in before you can comment on or make changes to this bug.