        Reviewed by Niko.

https://bugs.webkit.org/show_bug.cgi?id=26385
        Root SVG element is not checked on requiredFeatures, requiredExtension like other elements

        Also do the isValid check for outer <svg>.

        Test: svg/custom/outer-svg-unknown-feature.svg

Canonical link: https://commits.webkit.org/36621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44808 268f45cc-cd09-0410-ab3c-d52691b4dbfc