WebCore/svg/SVGDocument.cpp
@@ -99,6 +99,13 @@ void SVGDocument::updatePan(const FloatPoint& pos) const
     }
 }
 
+bool SVGDocument::childShouldCreateRenderer(Node* node) const
+{
+    if (node->hasTagName(SVGNames::svgTag))
+        return static_cast<SVGSVGElement*>(node)->isValid();
+    return true;
+}
+
 }
 
 // vim:ts=4:noet
